--- a/index.html
+++ b/index.html
@@ -593,8 +593,8 @@
     <script>
         // Configuración de seguridad - CAMBIA ESTOS VALORES
         const ADMIN_CREDENTIALS = {
-            username: 'admin',
-            password: 'mi_password_seguro_123'
+            username: 'Jir_9Xv#72Zq',
+            password: 'P!7vZ$w9fK3q&X@d'
         };
 
         let isLoggedIn = false;
