--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
         }
 
         // Configurar enlaces de redes sociales
-        document.getElementById('tiktok-link').href = 'https://tiktok.com/@tu-usuario'; // Agrega tu enlace de TikTok aquí
+        document.getElementById('tiktok-link').href = 'https://www.tiktok.com/@ofertas365link?_t=ZS-8wdfii5e9OC&_r=1'; // Agrega tu enlace de TikTok aquí
         document.getElementById('facebook-link').href = 'https://www.facebook.com/share/1Ac5YA2FR7/';
         document.getElementById('youtube-link').href = 'https://youtube.com/@tu-canal'; // Agrega tu enlace de YouTube aquí
         document.getElementById('instagram-link').href = 'https://www.instagram.com/ofertas365link?igsh=NWE2a3htNDcwMjhp';
